remove top padding from embed container so video object no longer overflows awkwardly

--- a/themes/news/less/base.less
+++ b/themes/news/less/base.less
@@ -481,7 +481,7 @@ ul.vbar {
 .embed-container {
   position: relative;
   padding-bottom: 56.25%; /* 16:9 */
-  padding-top: 25px;
+  // padding-top: 25px;
   height: 0;
   iframe{
     position: absolute;
